--- a/MyWpfDemo/MainWindows/MainWindow.xaml
+++ b/MyWpfDemo/MainWindows/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainWindows"
         mc:Ignorable="d"
-        Title="数据库配置系统" Height="450" Width="800" ToolTip="数据库配置系统，支持panda、库检">
-    <Grid ShowGridLines="True" ToolTip="2222">
+        Title="数据库配置系统" Height="450" Width="800" Icon="resouse/数据库.png">
+    <Grid ShowGridLines="False">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width= "10" />
+            <ColumnDefinition Width= "150" />
             <ColumnDefinition />
-            <ColumnDefinition Width="10" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -19,7 +19,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Menu Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="99">
+        <Menu Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="99" VerticalAlignment="Center">
             <MenuItem Header="系统">
                 <MenuItem Header="panda">
                 </MenuItem>
@@ -33,22 +33,38 @@
             </MenuItem>
         </Menu>
 
-        <ToolBarTray Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="99">
+        <ToolBarTray Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="99" VerticalAlignment="Center">
             <ToolBar>
-                <ComboBox>
-                    <ComboBoxItem Content="8" />
-                    <ComboBoxItem Content="10" />
-                    <ComboBoxItem Content="12" IsSelected="True" />
-                    <ComboBoxItem Content="14" />
-                    <ComboBoxItem Content="16" />
-                </ComboBox>
+                <Button Click="Button_Click">
+                    <Button.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="resouse/button_24.png" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </Button.Content>
+                </Button>
+            </ToolBar>
+            <ToolBar>
+                <Button Click="Button_Click_1">
+                    <Button.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="resouse/Bank transactions_24.png" VerticalAlignment="Center" />
+                            <Separator Width="1" />
+                        </StackPanel>
+                    </Button.Content>
+                </Button>
             </ToolBar>
         </ToolBarTray>
+
+        <ListBox Name="listBox" Grid.Row="2" Grid.Column="0">
+            <ListBoxItem Content="111111111" />
+            <ListBoxItem Content="222222222222" />
+            <ListBoxItem Content="3333333333333" />
+        </ListBox>
 
         <StatusBar Grid.Row="3" Grid.Column="0" Height="26" VerticalAlignment="Bottom" Grid.ColumnSpan="99">
             <StatusBar.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Grid ShowGridLines="True">
+                    <Grid ShowGridLines="False">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition />
