--- a/MyWpfDemo/TreeViewListDemoT/App.xaml
+++ b/MyWpfDemo/TreeViewListDemoT/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="OnlyTest.App"
+﻿<Application x:Class="TreeViewListDemoT.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OnlyTest"
-             StartupUri="DataGridGroup.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
+         
     </Application.Resources>
 </Application>
