--- a/MyWpfDemo/OnlyTest/App.xaml
+++ b/MyWpfDemo/OnlyTest/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OnlyTest"
-             StartupUri="DataGridGroup_Two.xaml">
-    <Application.Resources>
-    </Application.Resources>
+             StartupUri="DataGridGroup.xaml">
+   <Application.Resources>
+   </Application.Resources>
 </Application>
